# baml

python-fastapi-starter/: .gitignore  Makefile  README.md  pyproject.toml
python-fastapi-starter/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
python-fastapi-starter/baml_src/: analyze_books.baml  classify_message.baml  clients.baml  extract_resume.baml  main.baml  rag.baml  sim_fight.baml
python-fastapi-starter/fast_api_starter/: app.py
python-fastapi-starter/temp/baml/: analyze_books.baml  clients.baml
python-fastapi-starter/temp/baml/litty/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
python-fastapi-starter/tests/: test_baml.py
